added whiteSquare.png for white keys

--- a/main.html
+++ b/main.html
@@ -41,19 +41,29 @@
 
     <!-- Audio Files -->
     <audio id="bass_C0" src="./audio/bass_C0.mp3" type="audio/mpeg"></audio>
+    <audio id="bass_Db0" src="./audio/bass_Db0.mp3" type="audio/mpeg"></audio>
+    <audio id="bass_D0" src="./audio/bass_D0.mp3" type="audio/mpeg"></audio>
+    <audio id="bass_Eb0" src="./audio/bass_Eb0.mp3" type="audio/mpeg"></audio>
+    <audio id="bass_E0" src="./audio/bass_E0.mp3" type="audio/mpeg"></audio>
 
     <!-- Keyboard Grid -->
-    <div class="container">
+    <div class="container" id="keyboard">
         <table>
             <tr>
                 <td id="C0">
-                    <img id="topLeftImg" src="blankSquare.png" alt="blank square" width=200px height=200px>
+                    <img id="white_key" src="whiteSquare.png" alt="blank square" width=200px height=200px>
                 </td>
                 <td id="C#0">
-                    <img id="topMidImg" src="blackSquare.png" alt="blank square" width=200px height=200px>
+                    <img id="black_key" src="blackSquare.png" alt="blank square" width=200px height=200px>
                 </td>
                 <td id="D0">
-                    <img id="topRightImg" src="blankSquare.png" alt="blank square" width=200px height=200px>
+                    <img id="white_key" src="whiteSquare.png" alt="blank square" width=200px height=200px>
+                </td>
+                <td id="Eb0">
+                    <img id="black_key" src="blackSquare.png" alt="blank square" width=200px height=200px>
+                </td>
+                <td id="E0">
+                    <img id="white_key" src="whiteSquare.png" alt="blank square" width=200px height=200px>
                 </td>
             </tr>
         </table>
